# rust-vite-svelte

./: Cargo.toml  README.md
src/: main.rs
web/: index.html  package-lock.json  package.json
web/src/: App.svelte  Greeting.svelte
